tests/cases/errors/runtime_subtract_strings.lox
// Subtraction is only defined for numbers.
// expect runtime error: Operands must be numbers
print "a" - "b";
